src/test/ui/associated-types/bound-lifetime-in-return-only.structure.stderr
error[E0581]: return type references lifetime `'a`, which is not constrained by the fn input types
  --> $DIR/bound-lifetime-in-return-only.rs:29:24
   |
LL |     x: for<'a> fn() -> &'a i32
   |                        ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0581`.
